--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -922,7 +922,7 @@
 "attachmentType.kartat.sailion-ja-rakenteiden-sijainti-kartalla.info" "sv" "Kartskiss som visar var cisternen finns och platsen för de konstruktioner som hindrar/försvårar en rivning av cisternen"
 "attachmentType.kaytostapoistetun-oljy-tai-kemikaalisailion-jattaminen-maaperaan._group_label" "fi" "Käytöstäpoistetun öljy- tai kemikaalisäiliön jättäminen maaperään"
 "attachmentType.kaytostapoistetun-oljy-tai-kemikaalisailion-jattaminen-maaperaan._group_label" "sv" "Kvarlämnande i jorden av olje- eller kemikaliecistern som tagits ur bruk"
-"attachmentType.kaytostapoistetun-oljy-tai-kemikaalisailion-jattaminen-maaperaan.kiinteiston-omistajien-suostumus" "fi" "Kiinteiston omistajien suostumus"
+"attachmentType.kaytostapoistetun-oljy-tai-kemikaalisailion-jattaminen-maaperaan.kiinteiston-omistajien-suostumus" "fi" "Kiinteistön omistajien suostumus"
 "attachmentType.kaytostapoistetun-oljy-tai-kemikaalisailion-jattaminen-maaperaan.kiinteiston-omistajien-suostumus" "sv" "Fastighetsägares samtycke"
 "attachmentType.kaytostapoistetun-oljy-tai-kemikaalisailion-jattaminen-maaperaan.kiinteiston-omistajien-suostumus.info" "fi" "Kirjallinen suostumus säiliön maahan jättämiselle muilta kiinteistön omistajilta. Ei tarvita, jos hakijalla on pitkäaikainen vuokrasopimus kaupungin kanssa."
 "attachmentType.kaytostapoistetun-oljy-tai-kemikaalisailion-jattaminen-maaperaan.kiinteiston-omistajien-suostumus.info" "sv" "Övriga fastighetsägares skriftliga samtycke till att cisternen lämnas kvar i jorden"
