--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -28,8 +28,8 @@
 "empty" "sv" ""
 "fillInfoButton" "fi" "Täytä omilla tiedoilla"
 "fillInfoButton" "sv" "Fyll med egna uppgifter"
-"fisekelpoisuus" "fi" "FISE-kelpoisuus"
-"fisekelpoisuus" "sv" "FISE-kompetens"
+"fisekelpoisuus" "fi" "FISE-pätevyys"
+"fisekelpoisuus!" "sv" ""
 "fisekelpoisuus.poikkeuksellisen vaativa akustiikkasuunnittelu (korjausrakentaminen)" "fi" "poikkeuksellisen vaativa akustiikkasuunnittelu (korjausrakentaminen)"
 "fisekelpoisuus.poikkeuksellisen vaativa akustiikkasuunnittelu (korjausrakentaminen)" "sv" "exceptionellt krävande akustikplanering (ombyggnad)"
 "fisekelpoisuus.poikkeuksellisen vaativa akustiikkasuunnittelu (uudisrakentaminen)" "fi" "poikkeuksellisen vaativa akustiikkasuunnittelu (uudisrakentaminen)"
@@ -1257,9 +1257,9 @@
 "osapuoli.osoite.postitoimipaikannimi" "fi" "Postitoimipaikka"
 "osapuoli.osoite.postitoimipaikannimi" "sv" "Postanstalt"
 "osapuoli.patevyys._group_label" "fi" "Suunnittelijan kelpoisuus"
-"osapuoli.patevyys._group_label" "sv" "Planerarens behörighet"
+"osapuoli.patevyys._group_label!" "sv" ""
 "osapuoli.patevyys.fise" "fi" "FISE pätevyyskortti (linkki)"
-"osapuoli.patevyys.fise" "sv" "FISE komptenskort (länk)"
+"osapuoli.patevyys.fise!" "sv" ""
 "osapuoli.patevyys.kokemus" "fi" "Kokemus vuosina"
 "osapuoli.patevyys.kokemus" "sv" "Erfarenhet som år"
 "osapuoli.patevyys.kokemusvuodet" "fi" "Kokemus vuosina"
@@ -1268,10 +1268,10 @@
 "osapuoli.patevyys.koulutus" "sv" "Examen"
 "osapuoli.patevyys.Liiteet" "fi" "Liitteet"
 "osapuoli.patevyys.Liiteet" "sv" "Bilagor"
-"osapuoli.patevyys.patevyys" "fi" "Lisätietoa suunnittelijan kelpoisuudesta"
-"osapuoli.patevyys.patevyys" "sv" "Tilläggsinformation om planerarens kompetens"
-"osapuoli.patevyys.patevyysluokka._group_label" "fi" "Suunnittelutehtävän vaativuusluokka"
-"osapuoli.patevyys.patevyysluokka._group_label" "sv" "Planeringsuppgiftens svårighetsgrad"
+"osapuoli.patevyys.patevyys" "fi" "Lisätietoa suunnittelijan pätevyydestä"
+"osapuoli.patevyys.patevyys!" "sv" ""
+"osapuoli.patevyys.patevyysluokka._group_label" "fi" "Suunnittelijan pätevyys"
+"osapuoli.patevyys.patevyysluokka._group_label!" "sv" ""
 "osapuoli.patevyys.patevyysluokka.A" "fi" "Vaativa (A)"
 "osapuoli.patevyys.patevyysluokka.A" "sv" "Krävande (A)"
 "osapuoli.patevyys.patevyysluokka.AA" "fi" "Poikkeuksellisen vaativa (AA)"
@@ -1297,7 +1297,7 @@
 "osapuoli.patevyys.valmistumisvuosi" "fi" "Valmistumisvuosi"
 "osapuoli.patevyys.valmistumisvuosi" "sv" "Utexamineringsår"
 "osapuoli.patevyys-tyonjohtaja._group_label" "fi" "Työnjohtajan kelpoisuus"
-"osapuoli.patevyys-tyonjohtaja._group_label" "sv" "Arbetsledarens behörighet"
+"osapuoli.patevyys-tyonjohtaja._group_label!" "sv" ""
 "osapuoli.patevyys-tyonjohtaja.kokemusvuodet" "fi" "Kokemus vuosina"
 "osapuoli.patevyys-tyonjohtaja.kokemusvuodet" "sv" "Erfarenhet som år"
 "osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka._group_label" "fi" "Tehtävien vaativuus"
@@ -4580,8 +4580,8 @@
 "unit.tuntiaviikko" "sv" "timmar/vecka"
 "unit.y" "fi" "Vuosia"
 "unit.y" "sv" "År"
-"userinfo.architect.fiseKelpoisuus" "fi" "FISE-kelpoisuus (oletus)"
-"userinfo.architect.fiseKelpoisuus" "sv" "FISE-kompetens (förval)"
+"userinfo.architect.fiseKelpoisuus" "fi" "FISE-pätevyys (oletus)"
+"userinfo.architect.fiseKelpoisuus!" "sv" ""
 "uusiRakennus._group_label" "fi" "Uusi rakennus"
 "uusiRakennus._group_label" "sv" "Ny byggnad"
 "uusiRakennus.date" "fi" "Päiväys"
