Localization changes in sign attachments dialog.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4047,8 +4047,8 @@
 "setpw.success" "sv" "Lösenord har ställts in. Du kan nu logga in."
 "setpw.title" "fi" "Salasanan vaihtaminen"
 "setpw.title" "sv" "Ändra lösenord"
-"signAttachment.description" "fi" "Voit allekirjoittaa suunnitelmat Lupapisteessä sähköisesti.<br/>Tämä vastaa perinteistä suunnitelmiin tehtävää allekirjoitusta.<br/><b>Pääsuunnittelijat allekirjoittavat piirrokset.</b>"
-"signAttachment.description" "sv" "Du kan underteckna planerna elektroniskt i Lupapiste.<br/>Detta motsvarar en traditionell underskrift på planerna.<br/><b>Huvudplanerarna undertecknar ritningarna.</b>"
+"signAttachment.description" "fi" "Voit allekirjoittaa suunnitelmat Lupapisteessä sähköisesti.<br /><b>Rakennussuunnittelija allekirjoittaa pääpiirustukset.<br />Erityisalan suunnittelijat allekirjoittavat erityissuunnitelmat.</b>"
+"signAttachment.description" "sv" "Du kan underteckna planerna elektroniskt i Lupapiste.<br /><b>Byggnadsplanerare undertecknar huvudritningarna.<br />Planerare för specialområden undertecknar specialplanerna.</b>"
 "signAttachment.ok" "fi" "Valitut liitteet allekirjoitettu onnistuneesti"
 "signAttachment.ok" "sv" "Underteckningen av valda bilagor lyckades."
 "signAttachment.select" "fi" "Allekirjoita"
