added notice text

--- a/resources/i18n/documents.txt
+++ b/resources/i18n/documents.txt
@@ -1,2 +1,3 @@
 "document.operation-identifiers" "fi" "Tunnisteet"
 "document.operation-editor.description" "fi" "Kuvaus"
+"document.operation-identifier.notice" "fi" "Huom! Asemapiiroksessa on tällä rakennuksella käytettävä samaa tunnusta."
