--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1886,14 +1886,14 @@
 "company.users.count" "sv" "Användare {0} / {1}"
 "company-invite.add" "fi" "Valtuuta uusi yritys"
 "company-invite.add" "sv" "Befullmäktiga nytt företag"
-"company-invite.desc" "fi" "Voit valtuuttaa yrityksen alla olevasta listasta. Listauksesta löytyvät yritykset, jotka ovat ottaneet käyttöönsä Lupapisteen yritystili –palvelun. Valtuutuksen jälkeen yrityksen edustajat saavat oikeuden muokata hakemusta ja perinteistä valtakirjaa vastaavat oikeudet asioida puolestasi. Jos haluttua yritystä ei listauksesta löydy, voit valtuuttaa kyseisen yrityksen edustajan valtuuta uusi henkilö –painikkeen avulla."
+"company-invite.desc" "fi" "Voit valtuuttaa yrityksen alla olevasta listasta. Listauksesta löytyvät yritykset, jotka ovat ottaneet käyttöönsä Lupapisteen yritystili –palvelun. Valtuutuksen jälkeen yrityksen edustajat saavat oikeuden muokata hakemusta ja perinteistä valtakirjaa vastaavat oikeudet asioida puolestasi. Jos haluttua yritystä ei listauksesta löydy, voit valtuuttaa kyseisen yrityksen edustajan \"Valtuuta uusi henkilö\"–painikkeen avulla."
 "company-invite.desc" "sv" "Du kan ge fullmakt åt ett företag ur listan nedan. I så fall får företagets representanter rätt att anpassa ansökningen och samma rätt att företräda dig som med en traditionell fullmakt."
-"company-invite.help" "fi" "Voit valtuuttaa Lupapisteessä mukana olevan yrityksen käsittelemään hakemusta puolestasi. Yritysten valtuuttaminen on tällä hetkellä rajatussa pilottikäytössä."
-"company-invite.help" "sv" "Du kan befullmäktiga företaget som är med i Lupapiste att hantera ansökan för din del. Befullmäktigande av företag är för nuvarande i begränsad pilotbruk."
+"company-invite.help" "fi" "Voit valtuuttaa Lupapisteessä mukana olevan yrityksen käsittelemään hakemusta puolestasi."
+"company-invite.help" "sv" "Du kan befullmäktiga företaget som är med i Lupapiste att hantera ansökan för din del."
 "company-invite.invite" "fi" "Valtuuta uusi yritys"
 "company-invite.invite" "sv" "Befullmaktiga nytt företag"
 "company-invite-confirm.desc" "fi" "Lähetämme nyt valitsemasi yrityksen {0} pääkäyttäjälle viestin, että olet valtuuttanut yrityksen edustajien pääsyn hankkeellesi. Kun pääkäyttäjä vahvistaa viestin, on valtuutus valmis."
-"company-invite-confirm.desc" "sv" "Vi meddelar huvudanvändaren för det företag du nu har valt {0} att du har gett  företagets representanter fullmakt att besöka ditt projekt.  Fullmakten är i kraft när huvudanvändaren har bekräftat meddelandet ."
+"company-invite-confirm.desc" "sv" "Vi meddelar huvudanvändaren för det företag du nu har valt {0} att du har gett företagets representanter fullmakt att besöka ditt projekt. Fullmakten är i kraft när huvudanvändaren har bekräftat meddelandet ."
 "company-selector.title" "fi" "Valitse yritys"
 "company-selector.title" "sv" "Välj företag"
 "complementNeeded.title" "fi" "Viranomainen on pyytänyt täydennyksiä hakemukseesi. Kun olet täydentänyt hakemuksen viranomaisen ohjeiden mukaan, ilmoita tästä viranomaiselle \"Keskustelu\"-toiminnolla. Tämän jälkeen viranomainen siirtää hakemuksen takaisin käsittelyyn."
