Localization fix to operations tree.

--- a/resources/i18n/operations.txt
+++ b/resources/i18n/operations.txt
@@ -672,8 +672,8 @@
 "operations.tree.vesi-ja-viemarityot" "sv" "Utförande av vatten- och avloppsarbeten"
 "operations.tree.vesijohdosta" "fi" "Vapautus vesijohtoon liittymisestä (VHL 11 §)"
 "operations.tree.vesijohdosta" "sv" "Befrielse från anslutning till vattenledning (Lag om vattentjänster 11 §)"
-"operations.tree.vesijohdosta-ja-viemarista" "fi" "Vesijohtoon ja jätevesijärjestelmään liittymisestä"
-"operations.tree.vesijohdosta-ja-viemarista" "sv" "Om anslutning till vattenledning eller avloppssystem"
+"operations.tree.vesijohdosta-ja-viemarista" "fi" "Vapautus vesijohtoon ja jätevesijärjestelmään liittymisestä"
+"operations.tree.vesijohdosta-ja-viemarista" "sv" "Befrielse från anslutning till vattenledning eller avloppssystem"
 "operations.tree.vesistoluvat" "fi" "Vesistöluvat"
 "operations.tree.vesistoluvat" "sv" "Vattendragstillstånd"
 "operations.tree.viemarista" "fi" "Vapautus jätevesiviemäriin liittymisestä (VHL 11 §)"
