Translations and related fixes.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1385,7 +1385,7 @@
 "auth-admin.email-notifications" "fi" "Sähköposti-ilmoitukset"
 "auth-admin.email-notifications" "sv" "E-postanmälaningar"
 "auth-admin.email-notifications.info" "fi" "Voit lisätä useita sähköpostiosoitteita erottelemalla ne puolipisteellä (esim. matti@example.com; teppo@example.com)"
-"auth-admin.email-notifications.info!" "sv" ""
+"auth-admin.email-notifications.info" "sv" "Du kan tillägga fler än en e-postadresser genom att separera dem med semikolon (t.ex. matti@example.com; teppo@example.com)"
 "auth-admin.email-notifications.neighbor" "fi" "Kunnan halutaan hoitavan naapurien kuuleminen tai tiedotus"
 "auth-admin.email-notifications.neighbor" "sv" "Kommunen förväntas ombesörja hörandet av eller informationen till grannarna"
 "auth-admin.email-notifications.submit" "fi" "Hakemus jätetty"
@@ -2057,6 +2057,7 @@
 "error.bad-postal-code" "fi" "Postinumero on virheellinen"
 "error.bad-postal-code" "sv" "Postnummern är felaktig"
 "error.bulletin.not-found" "fi" "Ilmoitusta ei löydy."
+"error.bulletin.not-found" "sv" "Anmälan kan inte hittas."
 "error.command-illegal-state" "fi" "Toimintoa ei voi suorittaa tässä tilassa"
 "error.command-illegal-state" "sv" "Funktionen kan inte genomföras i detta läge"
 "error.company-not-accessible" "fi" "Yritystä ei voida näyttää"
@@ -4928,7 +4929,9 @@
 "statement.reply.state.replied" "fi" "Vastine annettu"
 "statement.reply.state.replied" "sv" "Svaromål givet"
 "statement.confirm.title" "fi" "Lähetä lausunto"
+"statement.confirm.title" "sv" "Skicka utlåtandet"
 "statement.confirm.body" "fi" "Lausuntoa ei voi lähettämisen jälkeen enää muokata. Haluatko varmasti lähettää lausunnon?"
+"statement.confirm.body" "sv" "När utlåtandet har skickats kan du inte längre ändra det. Är du säker på att du vill skicka utlåtandet?"
 "error.startdate-before-enddate" "fi" "Alkupäivämäärä on ennen loppupäivämäärää"
 "error.startdate-before-enddate" "sv" "Startdatumet är före slutdatumet"
 "error.service-lockdown" "fi" "Palvelu on hetkellisesti lukutilassa ylläpitotoimien vuoksi. Voit selailla hakemuksia, mutta tietojen muokkaus on tilapäisesti estetty. Pahoittelemme häiriötä!"
@@ -4950,6 +4953,6 @@
 "arkistoidaan" "fi" "Arkistoidaan"
 "arkistoidaan" "sv" "Arkiveras"
 "lisaaja" "fi" "Lisääjä"
-"lisaaja" "sv" ""
+"lisaaja" "sv" "lisaaja" "sv" "Vem lägger till?"
 "attachment.archivability" "fi" "Tiedosto soveltuu pysyvään säilytykseen"
-"attachment.archivability" "sv" ""
+"attachment.archivability" "sv" "Filen lämpar sig för permanent lagring"
