--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -25,7 +25,7 @@
 "fillInfoButton" "fi" "Täytä omilla tiedoilla"
 "fillInfoButton" "sv" "Fyll med egna uppgifter"
 "fisekelpoisuus" "fi" "FISE-pätevyys"
-"fisekelpoisuus!" "sv" ""
+"fisekelpoisuus" "sv" "FISE-kompetens"
 "fisekelpoisuus.poikkeuksellisen vaativa akustiikkasuunnittelu (korjausrakentaminen)" "fi" "poikkeuksellisen vaativa akustiikkasuunnittelu (korjausrakentaminen)"
 "fisekelpoisuus.poikkeuksellisen vaativa akustiikkasuunnittelu (korjausrakentaminen)" "sv" "exceptionellt krävande akustikplanering (ombyggnad)"
 "fisekelpoisuus.poikkeuksellisen vaativa akustiikkasuunnittelu (uudisrakentaminen)" "fi" "poikkeuksellisen vaativa akustiikkasuunnittelu (uudisrakentaminen)"
@@ -1253,9 +1253,9 @@
 "osapuoli.osoite.postitoimipaikannimi" "fi" "Postitoimipaikka"
 "osapuoli.osoite.postitoimipaikannimi" "sv" "Postanstalt"
 "osapuoli.patevyys._group_label" "fi" "Suunnittelijan kelpoisuus"
-"osapuoli.patevyys._group_label!" "sv" ""
+"osapuoli.patevyys._group_label" "sv" "Suunnittelijan kelpoisuus"
 "osapuoli.patevyys.fise" "fi" "FISE pätevyyskortti (linkki)"
-"osapuoli.patevyys.fise!" "sv" ""
+"osapuoli.patevyys.fise" "sv" "FISE kompetenskort (länk)"
 "osapuoli.patevyys.kokemus" "fi" "Kokemus vuosina"
 "osapuoli.patevyys.kokemus" "sv" "Erfarenhet som år"
 "osapuoli.patevyys.kokemusvuodet" "fi" "Kokemus vuosina"
@@ -1265,9 +1265,9 @@
 "osapuoli.patevyys.Liiteet" "fi" "Liitteet"
 "osapuoli.patevyys.Liiteet" "sv" "Bilagor"
 "osapuoli.patevyys.patevyys" "fi" "Lisätietoa suunnittelijan pätevyydestä"
-"osapuoli.patevyys.patevyys!" "sv" ""
+"osapuoli.patevyys.patevyys" "sv" "Mer info om planerarens kompetens"
 "osapuoli.patevyys.patevyysluokka._group_label" "fi" "Suunnittelijan pätevyys"
-"osapuoli.patevyys.patevyysluokka._group_label!" "sv" ""
+"osapuoli.patevyys.patevyysluokka._group_label" "sv" "Planerarens kompetens"
 "osapuoli.patevyys.patevyysluokka.A" "fi" "Vaativa (A)"
 "osapuoli.patevyys.patevyysluokka.A" "sv" "Krävande (A)"
 "osapuoli.patevyys.patevyysluokka.AA" "fi" "Poikkeuksellisen vaativa (AA)"
@@ -1293,7 +1293,7 @@
 "osapuoli.patevyys.valmistumisvuosi" "fi" "Valmistumisvuosi"
 "osapuoli.patevyys.valmistumisvuosi" "sv" "Utexamineringsår"
 "osapuoli.patevyys-tyonjohtaja._group_label" "fi" "Työnjohtajan kelpoisuus"
-"osapuoli.patevyys-tyonjohtaja._group_label!" "sv" ""
+"osapuoli.patevyys-tyonjohtaja._group_label" "sv" "Arbetsledarens behörighet"
 "osapuoli.patevyys-tyonjohtaja.kokemusvuodet" "fi" "Kokemus vuosina"
 "osapuoli.patevyys-tyonjohtaja.kokemusvuodet" "sv" "Erfarenhet som år"
 "osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka._group_label" "fi" "Tehtävien vaativuus"
@@ -4577,7 +4577,7 @@
 "unit.y" "fi" "Vuosia"
 "unit.y" "sv" "År"
 "userinfo.architect.fiseKelpoisuus" "fi" "FISE-pätevyys (oletus)"
-"userinfo.architect.fiseKelpoisuus!" "sv" ""
+"userinfo.architect.fiseKelpoisuus" "sv" "FISE-kompetens (standard)"
 "uusiRakennus._group_label" "fi" "Uusi rakennus"
 "uusiRakennus._group_label" "sv" "Ny byggnad"
 "uusiRakennus.date" "fi" "Päiväys"
