fixed some VVVL translations

--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -5284,14 +5284,14 @@
 "vesihuolto-kiinteisto.kiinteistoonKuuluu.rakennusvuosi" "sv" "Byggnadsår"
 "vesihuolto-kiinteisto.kiinteistoonKuuluu.vapautus" "fi" "Haen vapautusta tälle rakennukselle"
 "vesihuolto-kiinteisto.kiinteistoonKuuluu.vapautus" "sv" "Jag söker befrielse för denna byggnad"
-"vvvl-hulevesiviemarista._group_label" "fi" "Hulevesiviemäristä"
-"vvvl-hulevesiviemarista._group_label" "sv" "Från dagvattenledningen"
-"vvvl-vesijohdosta._group_label" "fi" "Vesijohdosta"
-"vvvl-vesijohdosta._group_label" "sv" "Från vattenledningen och avloppsledningen"
-"vvvl-vesijohdosta-ja-viemarista._group_label" "fi" "Vesijohdosta ja jätevesiviemäristä"
-"vvvl-vesijohdosta-ja-viemarista._group_label" "sv" "Från vattenledningen och avloppsledningen"
-"vvvl-viemarista._group_label" "fi" "Viemäristä"
-"vvvl-viemarista._group_label" "sv" "Från avloppet"
+"vvvl-hulevesiviemarista._group_label" "fi" "Vapautus hulevesiviemäristä"
+"vvvl-hulevesiviemarista._group_label" "sv" "Befrielse från dagvattenledningen"
+"vvvl-vesijohdosta._group_label" "fi" "Vapautus vesijohdosta"
+"vvvl-vesijohdosta._group_label" "sv" "Befrielse från vattenledningen och avloppsledningen"
+"vvvl-vesijohdosta-ja-viemarista._group_label" "fi" "Vapautus vesijohdosta ja jätevesiviemäristä"
+"vvvl-vesijohdosta-ja-viemarista._group_label" "sv" "Befrielse från vattenledningen och avloppsledningen"
+"vvvl-viemarista._group_label" "fi" "Vapautus viemäristä"
+"vvvl-viemarista._group_label" "sv" "Befrielse från avloppet"
 "ya-jatkoaika._group_label" "fi" "Hankkeen kuvaus"
 "ya-jatkoaika._group_label" "sv" "Beskrivning av projektet"
 "ya-kaivuulupa._group_label" "fi" "Työmaasta vastaava (Esim. kaivaja)"
