Confirmation for sending replies.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4932,6 +4932,10 @@
 "statement.confirm.title" "sv" "Skicka utlåtandet"
 "statement.confirm.body" "fi" "Lausuntoa ei voi lähettämisen jälkeen enää muokata. Haluatko varmasti lähettää lausunnon?"
 "statement.confirm.body" "sv" "När utlåtandet har skickats kan du inte längre ändra det. Är du säker på att du vill skicka utlåtandet?"
+"reply.confirm.title" "fi" "Lähetä vastine"
+"reply.confirm.title" "sv" "Skicka svaromål"
+"reply.confirm.body" "fi" "Vastinetta ei voi lähettämisen jälkeen enää muokata. Haluatko varmasti lähettää vastineen?"
+"reply.confirm.body" "sv" "När svaromål har skickats kan du inte längre ändra det. Är du säker på att du vill skicka svaromål?"
 "error.startdate-before-enddate" "fi" "Alkupäivämäärä on ennen loppupäivämäärää"
 "error.startdate-before-enddate" "sv" "Startdatumet är före slutdatumet"
 "error.service-lockdown" "fi" "Palvelu on hetkellisesti lukutilassa ylläpitotoimien vuoksi. Voit selailla hakemuksia, mutta tietojen muokkaus on tilapäisesti estetty. Pahoittelemme häiriötä!"
