LPK-1402 make building identifier required + localizations

--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -394,6 +394,7 @@
 "kaivo-etaisyydet.groupHelpText" "sv" "Komplettera nedanstående tabell med rätt alternativ, tilläggsutredning i obs-kolumnen."
 "kaupunkikuvatoimenpide._group_label" "fi" "Kaupunkikuvatoimenpide"
 "kaupunkikuvatoimenpide._group_label" "sv" "Stadsbildsåtgärd"
+"kaupunkikuvatoimenpide.tunnus" "fi" "Rakennelman tunnus"
 "kaytostapoistetun-oljy-tai-kemikaalisailion-jattaminen-maaperaan._group_label" "fi" "Käytöstäpoistetun öljy- tai kemikaalisäiliön jättäminen maaperään"
 "kaytostapoistetun-oljy-tai-kemikaalisailion-jattaminen-maaperaan._group_label" "sv" "Kvarlämnande i jorden av olje- eller kemikaliecistern som tagits ur bruk"
 "kaytostapoistetun-sailion-jattaminen-maaperaan.maahan-jattamisen-perustelut._group_label" "fi" "Maahan jättämisen perustelut"
@@ -5186,6 +5187,7 @@
 "uusiRakennus.verkostoliittymat.vesijohtoKytkin" "sv" "Vattenledning"
 "uusiRakennus.verkostoliittymat.viemariKytkin" "fi" "Jätevesi / Viemäri"
 "uusiRakennus.verkostoliittymat.viemariKytkin" "sv" "Avlopp"
+"uusiRakennus.tunnus" "fi" "Rakennuksen tunnus"
 "uusi-rakennus-ei-huoneistoa._group_label" "fi" "Uusi rakennus"
 "uusi-rakennus-ei-huoneistoa._group_label" "sv" "Ny byggnad"
 "vaadittuLupaehtona" "fi" "Vaadittu lupaehtona"
