--- a/resources/i18n/guests.txt
+++ b/resources/i18n/guests.txt
@@ -48,3 +48,5 @@
 "guest-authority.remove-title" "sv" "Stryk projektspecifik läsrätt"
 "guest-authority.remove-body" "fi" "Oletko varma? Samalla käyttäjältä poistetaan jo annetut hankekohtaiset lukuoikeudet tämän organisaation hakemuksilta."
 "guest-authority.remove-body" "sv" "Är du säker? I ansökningar från denna organisation stryks samtidigt alla projektspecifika läsrättigheter som redan har beviljats för denna användare."
+"email.title.guest-invite" "fi" "kutsu"
+"email.title.guest-invite" "sv" "inbjudan"
