added suunnitelutehtavanVaativuusluokka field

--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -1311,6 +1311,18 @@
 "osapuoli.patevyysvaatimusluokka.C" "sv" "Ringa (C)"
 "osapuoli.patevyysvaatimusluokka.ei tiedossa" "fi" "Ei tiedossa"
 "osapuoli.patevyysvaatimusluokka.ei tiedossa" "sv" "Inte känt"
+"osapuoli.suunnittelutehtavanVaativuusluokka._group_label" "fi" "Suunnittelutehtävän vaativuusluokka"
+"osapuoli.suunnittelutehtavanVaativuusluokka._group_label" "sv" "Planeringsuppgiftens svårighetsgrad"
+"osapuoli.suunnittelutehtavanVaativuusluokka.A" "fi" "Vaativa (A)"
+"osapuoli.suunnittelutehtavanVaativuusluokka.A" "sv" "Krävande (A)"
+"osapuoli.suunnittelutehtavanVaativuusluokka.AA" "fi" "Poikkeuksellisen vaativa (AA)"
+"osapuoli.suunnittelutehtavanVaativuusluokka.AA" "sv" "Exceptionellt krävande (AA)"
+"osapuoli.suunnittelutehtavanVaativuusluokka.B" "fi" "Tavanomainen (B)"
+"osapuoli.suunnittelutehtavanVaativuusluokka.B" "sv" "Sedvanlig (B)"
+"osapuoli.suunnittelutehtavanVaativuusluokka.C" "fi" "Vähäinen (C)"
+"osapuoli.suunnittelutehtavanVaativuusluokka.C" "sv" "Ringa (C)"
+"osapuoli.suunnittelutehtavanVaativuusluokka.ei tiedossa" "fi" "Ei tiedossa"
+"osapuoli.suunnittelutehtavanVaativuusluokka.ei tiedossa" "sv" "Inte känt"
 "osapuoli.suoramarkkinointilupa" "fi" "Tietoja saa luovuttaa suoramarkkinointia sekä mielipide- ja markkinatutkimusta varten."
 "osapuoli.suoramarkkinointilupa" "sv" "Uppgifterna får överlämnas för direktmarknadsföring och åsikts- och marknadsundersökningar."
 "osapuoli.suunnittelija.kuntaRoolikoodi._group_label" "fi" "Suunnittelurooli"
