check person id

--- a/resources/i18n/change-email.txt
+++ b/resources/i18n/change-email.txt
@@ -2,9 +2,11 @@
 "userinfo.change-email!" "sv" ""
 "userinfo.change-email-submit!" "fi" "Submit"
 "userinfo.change-email-submit!" "sv" ""
-"userinfo.new-email!" "fi" "Uusi osoite"
+"userinfo.old-email!" "fi" "Nykyinen sähköpostiosoite"
+"userinfo.old-email!" "sv" ""
+"userinfo.new-email!" "fi" "Uusi sähköpostiosoite"
 "userinfo.new-email!" "sv" ""
-"userinfo.change-email-not-possible!" "fi" "Sähköpostiosoitteen vaihtaminen ei onnistu, sillä henkilötunnuksesi ei ole tiedossamme. Ota yhteys pääkäyttäjääsi."
+"userinfo.change-email-not-possible!" "fi" "Sähköpostiosoitteen vaihtaminen ei onnistu, sillä henkilötunnuksesi ei ole Lupapisteen tiedoissa. Ota yhteys pääkäyttäjääsi."
 "userinfo.change-email-not-possible!" "sv" ""
 "email.title.change-email!" "fi" "Uuden sähköpostiosoitteen vahvistus"
 "change-email.init-header!" "fi" "Sähköpostiosoitteen vaihto vaatii tunnistautumisen"
