Generalized error message

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -3698,8 +3698,8 @@
 "register.activation-email-info2" "sv" "Aktivera din användarbeteckning genom att klicka på aktiveringslänken i din e-post. Således kan vi kontrollera att din e-postadress fungerar. Om aktiverings e-post inte finns i mottagna post, kolla på din skräppost"
 "register.autologin" "fi" "Kirjaudutaan sisään..."
 "register.autologin" "sv" "Loggar in…"
-"register.cancel" "fi" "Tunnistautuminen peruutettiin. Palveluun rekisteröityminen vaatii tunnistautumisen. Ole hyvä ja yritä uudelleen."
-"register.cancel" "sv" "Registrering avbruten. Identifiering krävs för att registrera sig i tjänsten. Var god och försök på nytt."
+"register.cancel" "fi" "Tunnistautuminen peruutettiin. Ole hyvä ja yritä uudelleen."
+"register.cancel" "sv" "Registrering avbruten. Var god och försök på nytt."
 "register.company.account15.bullet1" "fi" "Kaikki yrityksen lupa-asioinnit samassa työtilassa"
 "register.company.account15.bullet1" "sv" "Företagets alla tillståndsärenden på samma ställe"
 "register.company.account15.bullet2" "fi" "Viidelletoista käyttäjälle"
