Added a link to RT-card in asemapiirros attachment info

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1202,7 +1202,7 @@
 "attachmentType.ottamisalue.ote_asemakaavasta.info" "sv" ""
 "attachmentType.ottamisalue.ote_yleiskaavasta.info" "fi" ""
 "attachmentType.ottamisalue.ote_yleiskaavasta.info" "sv" ""
-"attachmentType.paapiirustus.asemapiirros.info" "fi" "Aina rakennushankkeen yhteydessä"
+"attachmentType.paapiirustus.asemapiirros.info" "fi" "Aina rakennushankkeen yhteydessä<br /><a href=\"https://www.rakennustieto.fi/kortistot/rt/kortit/10784\" target=\"_blank\">Tutustu RT-korttiin</a>"
 "attachmentType.paapiirustus.asemapiirros.info" "sv" "Alltid vid byggprojekt"
 "attachmentType.paapiirustus.julkisivupiirros.info" "fi" "Aina rakennushankkeen yhteydessä"
 "attachmentType.paapiirustus.julkisivupiirros.info" "sv" "Alltid vid byggprojekt"
@@ -3700,8 +3700,8 @@
 "register.activation-email-info2" "sv" "Aktivera din användarbeteckning genom att klicka på aktiveringslänken i din e-post. Således kan vi kontrollera att din e-postadress fungerar. Om aktiverings e-post inte finns i mottagna post, kolla på din skräppost"
 "register.autologin" "fi" "Kirjaudutaan sisään..."
 "register.autologin" "sv" "Loggar in…"
-"register.cancel" "fi" "Tunnistautuminen peruutettiin. Palveluun rekisteröityminen vaatii tunnistautumisen. Ole hyvä ja yritä uudelleen."
-"register.cancel" "sv" "Registrering avbruten. Identifiering krävs för att registrera sig i tjänsten. Var god och försök på nytt."
+"register.cancel" "fi" "Tunnistautuminen peruutettiin. Ole hyvä ja yritä uudelleen."
+"register.cancel" "sv" "Registrering avbruten. Var god och försök på nytt."
 "register.company.account15.bullet1" "fi" "Kaikki yrityksen lupa-asioinnit samassa työtilassa"
 "register.company.account15.bullet1" "sv" "Företagets alla tillståndsärenden på samma ställe"
 "register.company.account15.bullet2" "fi" "Viidelletoista käyttäjälle"
