--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -2523,7 +2523,7 @@
 "help.bulletin.state.verdictGiven" "fi" "Kun hakemuksesta julkaistaan päätös:<br/>- Julkipano-sivustolle viedään Lupapisteessä oleva päätös liitteineen<br/>- Hakemustiedot poistuvat Julkipano-sivustolta"
 "help.bulletin.state.verdictGiven" "sv" "När beslutet om ansökan har kungjorts:<br/>-Beslutet med bilagor överförs från Lupapiste till Anslag-sajten<br/>- Ansökan försvinner från Anslag-sajten"
 "help.KT.AddOperations" "fi" "Voit liittää samaan hakemukseen useamman kiinteistönmuodostuksen ja rasitetoimituksen. Mikäli toimenpide liittyy useampaan kiinteistöön (kuten esimerkiksi rasitetoimitus), niin voit lisätä uusia kohdekiinteistöjä ylläolevalla Lisää kohdekiinteistö -napilla."
-"help.KT.AddOperations" "sv" "Till samma ansökan kan du bifoga flera fastighetsbildningar och servitutsförrättningar. Ifall åtgärden gäller flera fastigheter (som exempelvis en servitutsförrättning) kan du lägga till nya fastighetsobjekt via knappen Lägg till fastighetsobjekt här ovanom."
+"help.KT.AddOperations" "sv" "Till samma ansökan kan du bifoga flera fastighetsbildningar och servitutsförrättningar. Ifall åtgärden gäller flera fastigheter (såsom exempelvis en servitutsförrättning) kan du lägga till nya målfastigheter via knappen Lägg till målfastighet ovan."
 "help.KT.applicationInfoDesc" "fi" "Tällä välilehdellä näet valitsemaasi toimenpiteeseen liittyvät lomaketiedot. Osioon tallennettavat tiedot välittyvät kunnan kautta eri viranomaisten järjestelmiin."
 "help.KT.applicationInfoDesc" "sv" "Under denna flik ser du alla blankettuppgifter med anknytning till den åtgärd du valt. De uppgifter som sparas här överförs via kommunen till olika myndigheters system."
 "help.KT.applicationSummaryDesc" "fi" "Tällä välilehdellä näet hankkeeseesi liittyvät hakemuksen aikaiset tiedot."
@@ -3939,7 +3939,7 @@
 "search" "fi" "Hae"
 "search" "sv" "Sök"
 "secondary-kiinteistot._append_label" "fi" "Lisää kohdekiinteistö"
-"secondary-kiinteistot._append_label" "sv" "Addera målfastighet"
+"secondary-kiinteistot._append_label" "sv" "Lägg till målfastighet"
 "secondary-kiinteistot._group_label" "fi" "Lisäkohdekiinteistö"
 "secondary-kiinteistot._group_label" "sv" "Tillagd målfastighet"
 "selected" "fi" "Valittu"
