--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -395,6 +395,7 @@
 "kaupunkikuvatoimenpide._group_label" "fi" "Kaupunkikuvatoimenpide"
 "kaupunkikuvatoimenpide._group_label" "sv" "Stadsbildsåtgärd"
 "kaupunkikuvatoimenpide.tunnus" "fi" "Rakennelman tunnus"
+"kaupunkikuvatoimenpide.tunnus" "sv" "Konstruktionens beteckning"
 "kaytostapoistetun-oljy-tai-kemikaalisailion-jattaminen-maaperaan._group_label" "fi" "Käytöstäpoistetun öljy- tai kemikaalisäiliön jättäminen maaperään"
 "kaytostapoistetun-oljy-tai-kemikaalisailion-jattaminen-maaperaan._group_label" "sv" "Kvarlämnande i jorden av olje- eller kemikaliecistern som tagits ur bruk"
 "kaytostapoistetun-sailion-jattaminen-maaperaan.maahan-jattamisen-perustelut._group_label" "fi" "Maahan jättämisen perustelut"
@@ -5188,6 +5189,7 @@
 "uusiRakennus.verkostoliittymat.viemariKytkin" "fi" "Jätevesi / Viemäri"
 "uusiRakennus.verkostoliittymat.viemariKytkin" "sv" "Avlopp"
 "uusiRakennus.tunnus" "fi" "Rakennuksen tunnus"
+"uusiRakennus.tunnus" "sv" "Byggnadens beteckning"
 "uusi-rakennus-ei-huoneistoa._group_label" "fi" "Uusi rakennus"
 "uusi-rakennus-ei-huoneistoa._group_label" "sv" "Ny byggnad"
 "vaadittuLupaehtona" "fi" "Vaadittu lupaehtona"
