--- a/resources/i18n/documents.txt
+++ b/resources/i18n/documents.txt
@@ -4,5 +4,5 @@
 "document.operation-identifiers" "sv" "Taggar"
 "document.operation-editor.description" "fi" "Kuvaus"
 "document.operation-editor.description" "sv" "Beskrivning"
-"document.operation-identifier.notice" "fi" "Huom! Asemapiiroksessa on tällä rakennuksella käytettävä samaa tunnusta."
+"document.operation-identifier.notice" "fi" "Huom! Asemapiirroksessa on tällä rakennuksella käytettävä samaa tunnusta. Esim. A."
 "document.operation-identifier.notice" "sv" "Obs! Använd samma beteckning för byggnaden som i situationsplanen."
