--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4244,8 +4244,8 @@
 "statement.tab.reply-request" "sv" "Be om genmäle"
 "statement.tab.statement" "fi" "Lausunto"
 "statement.tab.statement" "sv" "Utlåtande"
-"statement.title" "fi" "Puoltotieto"
-"statement.title" "sv" "Uppgift om samtycke"
+"statement.title" "fi" "Lausuntotieto"
+"statement.title" "sv" "Uppgift om utlåtande"
 "statement.updated" "fi" "Hakemuksen lausuntoa on päivitetty."
 "statement.updated" "sv" "Utlåtandet om ansökan har uppdaterats."
 "statement.yes" "fi" "Puoltaa"
