action column added

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1784,7 +1784,7 @@
 "caseFile.action" "sv" "Behandlingsskede"
 "caseFile.actionDate" "fi" "Vaiheen alku"
 "caseFile.actionDate" "sv" "Skedets inledningsdatum"
-"caseFile.documentDate" "fi" "Aloitus- tai toimituspäivämäärä"
+"caseFile.documentDate" "fi" "Kirjauspäivä"
 "caseFile.documentDate" "sv" "Start- eller inlämningsdatum"
 "caseFile.heading" "fi" "Käsittelyprosessi"
 "caseFile.heading" "sv" "Uppgifter om behandlingsprocessen"
@@ -4960,3 +4960,7 @@
 "attachment.archivability" "sv" "Filen lämpar sig för permanent lagring"
 "attachment.downloadOriginalVersion.info" "fi" "Tiedostoa on käännetty,"
 "attachment.downloadOriginalVersion.link" "fi" "lataa alkuperäinen versio."
+"caseFile.action.review-request" "fi" "Vaatimus katselmoinnista"
+"caseFile.action.review-request" "sv" ""
+"caseFile.action.review" "fi" "Katselmointi"
+"caseFile.action.review" "sv" ""
