--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -846,6 +846,7 @@
 "attachmentType.ennakkoluvat_ja_lausunnot.ymparistolupa.info" "fi" "Jos hankkeeseen on haettu ympäristölupa muuten kuin Lupapisteen kautta"
 "attachmentType.ennakkoluvat_ja_lausunnot.ymparistolupa.info" "sv" "Om man har ansökt om miljötillstånd i projektet på annat sätt än via Lupapiste"
 "attachmentType.ennakkoluvat_ja_lausunnot.lausunto.info!" "fi" "Jos asiaan liittyen on annettu lausunto"
+"attachmentType.ennakkoluvat_ja_lausunnot.ennakkoneuvottelumuistio.info" "fi" "Jos hankkeesta on pidetty ennakkoneuvottelu"
 "attachmentType.ennakkoluvat_ja_lausunnot.vesi_ja_viemariliitoslausunto_tai_kartta.info" "fi" "Jos hankkeessa liitytään olemassa olevaan tai rakenteilla olevaan verkostoon"
 "attachmentType.ennakkoluvat_ja_lausunnot.vesi_ja_viemariliitoslausunto_tai_kartta.info" "sv" "Om man i projektet anslutar sig till ett existerande nätverk eller till ett under byggande"
 "attachmentType.ennakkoluvat_ja_lausunnot.paatos_ajoliittymasta.info!" "fi" "Jos hankkeessa muutetaan tai rakennetaan uusi ajoliittymä ELY:n hallinnoimalle tielle"
