fix strange localization

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -920,8 +920,8 @@
 "attachmentType.rakennuspaikka.tonttikartta_tarvittaessa.info" "sv" "Tomtkartan måste levereras när myndigheten kräver"
 "attachmentType.rakennuspaikka.selvitys_rakennuspaikan_korkeusasemasta.info" "fi" "Uudisrakennushankkeessa tai jos tehdään merkittäviä pihaan kohdistuvia muutoksia"
 "attachmentType.rakennuspaikka.selvitys_rakennuspaikan_korkeusasemasta.info" "sv" "Vid nybyggnadprojet eller om man gör betydande ändringar som gäller gården"
-"attachmentType.selvitykset.yhteistilat.info" "fi" "Kun hankkeeeen asuinkerrostalon tai rivitalon yhteistiloja"
-"attachmentType.selvitykset.yhteistilat.info" "sv" "När projektet berör gemensamma utrymmen av vånings- eller radhus"
+"attachmentType.selvitykset.yhteistilat.info!" "fi" "Jos hankkeeseen liittyy asuinkerrostalon tai rivitalon yhteistiloja"
+"attachmentType.selvitykset.yhteistilat.info!" "sv" "Om utrymmen av vånings- eller radhus anknyter till projektet"
 "attachmentType.selvitykset.energiataloudellinen_selvitys.info" "fi" "Aina uudisrakennus-, korjaus- ja muutoshankkeissa"
 "attachmentType.selvitykset.energiataloudellinen_selvitys.info" "sv" "Alltid i nybyggnads-, reparations- och ombyggnadsprojekt"
 "attachmentType.selvitykset.energiatodistus.info" "fi" "Aina uudisrakennushankkeissa (yli 50m2)"
